# docker-hello-interop

./: Dockerfile  README.md  cbindgen.toml  run.sh
from_c/: main.c
from_rust/: Cargo.toml
from_rust/src/: main.rs
hello_interop/: Cargo.toml
hello_interop/src/: lib.rs
