[package]
name = "hello_interop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = [
    "rlib",
    "staticlib",
    #"cdylib" is not supported because
    #   target `x86_64-unknown-linux-musl` does not support dynamic linking
]

[dependencies]
qualifier_attr = { version = "0.2", optional = true }

[features]
c_api = ["dep:qualifier_attr"]
